test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/mismatched_subscript.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[43]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(indices)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  identifier(vals)
  [
  const int(3)
  ]
  =
  {
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  }
  ;
  return
  identifier(vals)
  [
  identifier(indices)
  [
  const int(1)
  ]
  ;
  }
